#2 DatePicker Event Programming

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SimpleDiary</string>
+    <string name="str_but">str_but</string>
     <String name="str_but">버튼</String>
 </resources>
